--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         }
   ],
   "autoload": {
+       "psr-0": {
+             "dTR": "src/"
+        },
         "files": ["src/dTR/Networking/dTRIP.php"]
   },
   "require": {
