--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
         "branch-alias": {
             "dev-master": "2.2.5-dev"
         }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.6"
   }
 }
